<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/imagem"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/directions_car" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carshow"
        android:textSize="60sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/ivImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="40sp"
        android:textColor="#666"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="+5511912345678"
        android:hint="@string/telefone"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="60dp"
        android:inputType="phone"
        android:textColor="#333333"
        android:background="#f0f0f0"
        android:padding="12dp"
        android:gravity="center"
        android:text="@string/ddi"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btSendCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="#000"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textSize="16sp"
        android:text="@string/enviar_codigo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhone" />

    <EditText
        android:id="@+id/etCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:autofillHints="101010"
        android:hint="@string/codigo"
        android:inputType="numberPassword"
        android:textColor="#333333"
        android:background="#f0f0f0"
        android:padding="12dp"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btSendCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btValidateCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="#000"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textSize="16sp"
        android:text="@string/validar_codigo"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCode" />

    <Button
        android:id="@+id/btLoginGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColor="@android:color/white"
        android:background="#1255FF"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textSize="16sp"
        android:text="@string/google_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btValidateCode" />

</androidx.constraintlayout.widget.ConstraintLayout>