<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="24dp"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".CarActivity">

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="120dp"
        android:layout_gravity="center_horizontal"
        android:autofillHints="@string/imagem"
        android:contentDescription="@string/imagem"
        android:src="@drawable/directions_car"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/pbImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <EditText
        android:id="@+id/etModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/modelo"
        android:hint="@string/modelo"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="20sp"
        android:textColor="#333333"
        android:background="#f0f0f0"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        tools:text="@string/fusca" />

    <EditText
        android:id="@+id/etYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="2010"
        android:hint="@string/ano"
        android:inputType="number"
        android:maxLines="1"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="#333333"
        android:background="#f0f0f0"
        android:layout_marginTop="8dp"
        android:padding="12dp"
        tools:text="1969" />

    <EditText
        android:id="@+id/etLicence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="AAA-9999"
        android:hint="@string/placa"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/etYear"
        android:textColor="#333333"
        android:background="#f0f0f0"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        tools:text="ZZZ-9999" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/etImageUrl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="0.95"
            android:autofillHints="https://example.com.br/image.png"
            android:background="#f0f0f0"
            android:enabled="false"
            android:inputType="textUri"
            android:gravity="center"
            android:hint="@string/url"
            android:maxLines="1"
            android:padding="12dp"
            android:textColor="#999"
            android:textSize="20sp"
            tools:text="URL" />

        <ImageButton
            android:id="@+id/btnCameraAdd"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/foto"
            android:textColor="@android:color/white"
            android:background="#1255FF"
            android:layout_marginTop="8dp"
            android:src="@drawable/inked_camera"
            android:layout_marginStart="8dp"
            android:layout_weight="0.05" />

        <ImageButton
            android:id="@+id/btnCameraRemove"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/foto"
            android:textColor="@android:color/white"
            android:background="#CC2222"
            android:layout_marginTop="8dp"
            android:src="@drawable/flip_camera"
            android:layout_marginStart="8dp"
            android:visibility="gone"
            android:layout_weight="0.05" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btSave"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="48dp"
        android:contentDescription="@string/salvar"
        android:textColor="@android:color/white"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textSize="20sp"
        android:background="#228822"
        android:src="@drawable/save" />

    <ImageButton
        android:id="@+id/btDelete"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="48dp"
        android:contentDescription="@string/deletar"
        android:textColor="@android:color/white"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textSize="20sp"
        android:background="#CC2222"
        android:src="@drawable/delete_forever"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/googleMapContent"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:visibility="gone"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        tools:visibility="visible" >

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/btBack"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="48dp"
        android:contentDescription="@string/voltar"
        android:textColor="@android:color/white"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textSize="20sp"
        android:background="@color/black"
        android:src="@drawable/return_arrow" />
</LinearLayout>