<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp" >

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/imagem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/directions_car" />

    <TextView
        android:id="@+id/tvModel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/ivImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:text="Modelo" />

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/ivImage"
        app:layout_constraintTop_toBottomOf="@id/tvModel"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        tools:text="Ano" />

    <TextView
        android:id="@+id/tvLicense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/ivImage"
        app:layout_constraintTop_toBottomOf="@id/tvYear"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        tools:text="Placa"/>

    <LinearLayout
        android:id="@+id/llLocation"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ivImage"
        app:layout_constraintTop_toBottomOf="@id/tvLicense"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp">

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/localizacao"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/tvLat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lat_loc"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/tvLong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/long_loc"
            android:textSize="14sp"
            android:textColor="@color/black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
